--- a/include/inlined-standalone.html
+++ b/include/inlined-standalone.html
@@ -67,6 +67,10 @@
 	--GW-collapse-inline-expanded-disclosure-button-text-color: #bbb;
 	--GW-collapse-inline-disclosure-button-text-hover-color: #999;
 
+	/*	Aux-links collapse blocks.
+	 */
+	--GW-aux-links-collapse-border-color: #c4c4c4;
+
     /*  Headings.
      */
     --GW-H1-border-color: #888;
@@ -329,5 +333,5 @@
 	--GW-checkerboard-scrollbar-hover-background-image: var(--GW-image-checkerboard-000-fff-2x-gif);
 }
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1701111731">
-<link rel="stylesheet" href="/static/css/style.css?v=1701111731">
+<link rel="stylesheet" href="/static/css/head.css?v=1701311525">
+<link rel="stylesheet" href="/static/css/style.css?v=1701311525">
