--- a/css/colors.css
+++ b/css/colors.css
@@ -66,6 +66,10 @@
 	--GW-collapse-inline-expanded-disclosure-button-text-color: #bbb;
 	--GW-collapse-inline-disclosure-button-text-hover-color: #999;
 
+	/*	Aux-links collapse blocks.
+	 */
+	--GW-aux-links-collapse-border-color: #c4c4c4;
+
     /*  Headings.
      */
     --GW-H1-border-color: #888;
