--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -67,6 +67,10 @@
 	--GW-collapse-inline-expanded-disclosure-button-text-color: #bbb;
 	--GW-collapse-inline-disclosure-button-text-hover-color: #999;
 
+	/*	Aux-links collapse blocks.
+	 */
+	--GW-aux-links-collapse-border-color: #c4c4c4;
+
     /*  Headings.
      */
     --GW-H1-border-color: #888;
@@ -397,6 +401,10 @@
 	--GW-collapse-inline-disclosure-button-text-color: #c1c1c1;
 	--GW-collapse-inline-expanded-disclosure-button-text-color: #6c6c6c;
 	--GW-collapse-inline-disclosure-button-text-hover-color: #8b8b8b;
+
+	/*	Aux-links collapse blocks.
+	 */
+	--GW-aux-links-collapse-border-color: #646464;
 
     /*  Headings.
      */
@@ -910,6 +918,6 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
 	background-color: var(--GW-wikipedia-image-background-color);
 }
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1700964177">
-<script src="/static/js/head.js?v=1701109339"></script>
+<link rel="stylesheet" href="/static/css/head.css?v=1701311525">
+<script src="/static/js/head.js?v=1701311525"></script>
 <link rel="preload" href="/static/img/icon/icons.svg?v=1699985093" as="image">
