--- a/404.page
+++ b/404.page
@@ -1,7 +1,6 @@
 ---
 title: 404 Not Found
 description: "404 Not Found Error: no page by this name!"
-author: "N/A"
 thumbnail: /static/img/logo/logo-unifrakturmaguntia-lowercase-h.png
 thumbnailText: "'I think you went too far.' [Image of Fraktur/blackletter lowercase letter 'H', alluding to the 'G' Fraktur logo of Gwern.net, humorously implying that the reader who has triggered the 404-Not-Found error did so by going too far alphabetically past the 'G'.]"
 created: 2009-01-27
@@ -14,7 +13,7 @@ index: true
 error404: true
 ...
 
-![You went too far.](/static/img/logo/logo-unifrakturmaguntia-lowercase-h.svg "Image of blackletter lowercase letter ‘H’, alluding to the ‘G’ Fraktur logo of Gwern.net, humorously implying that the reader who has triggered a 404 Not Found error went too far past the ‘G’."){.float-right .outline-not style="margin-top: -50px;" width="452" height="452"}
+![You went too far.](/static/img/logo/logo-unifrakturmaguntia-lowercase-h.svg "Image of blackletter lowercase letter ‘H’, alluding to the ‘G’ Fraktur logo of Gwern.net, humorously implying that the reader who has triggered a 404 Not Found error went too far past the ‘G’."){.float-right .outline-not width="452" height="452"}
 
 <div class="epigraph">
 > Every shrub, every tree—<br />if one has not forgotten<br />where they were planted—<br />has beneath the fallen snow<br />some vestige of its form.
