Fix bugs with floated code blocks

--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -1295,6 +1295,12 @@ section.highlight-fading::before {
     padding-bottom: 0;
 }
 
+/*	Collapse/float interaction.
+ */
+.collapse-block:not(.float) {
+	clear: both;
+}
+
 /************************************/
 /*  Collapse block component z-order.
  */
