--- a/css/default.css
+++ b/css/default.css
@@ -232,6 +232,12 @@ section.highlight-fading::before {
     padding-bottom: 0;
 }
 
+/*	Collapse/float interaction.
+ */
+.collapse-block:not(.float) {
+	clear: both;
+}
+
 /************************************/
 /*  Collapse block component z-order.
  */
