--- a/404.page
+++ b/404.page
@@ -81,7 +81,7 @@ Or look at a list of **pages by traffic**:
 - [Blackmail fail](/blackmail "Branwen 2013"){.backlink-not .icon-not}
 - [Melatonin](/melatonin){.backlink-not .icon-not}
 - [Anime Crop Datasets: Faces, Figures, & Hands](/crop "Branwen et al 2020"){.backlink-not .icon-not}
-- [Banner Ads Considered Harmful](/ad "Branwen 2017"){.backlink-not .icon-not}
+- [Banner Ads Considered Harmful](/banner "Branwen 2017"){.backlink-not .icon-not}
 - [In Defense Of Inclusionism](/inclusionism){.backlink-not .icon-not}
 - [Archiving URLs](/archiving){.backlink-not .icon-not}
 - [Choose-Your-Own-Adventure AI Dungeon Games](/cyoa "Branwen 2021"){.backlink-not .icon-not}
