--- a/css/special-occasions.css
+++ b/css/special-occasions.css
@@ -261,7 +261,7 @@ body.special-christmas-dark #sidebar a {
 body[class*='special-christmas'] #sidebar svg.logo-image {
 	visibility: hidden;
 }
-body[class*='special-christmas'] #sidebar svg.logo-image img {
+body[class*='special-christmas'] #sidebar span.logo-image img {
 	filter: none;
 }
 @media all and (max-width: 649px) {
