Tweak aggregated margin note styling

--- a/css/head-GENERATED.css
+++ b/css/head-GENERATED.css
@@ -1627,6 +1627,7 @@ figure.width-full {
 
 .markdownBody .margin-notes-block {
 	text-align: center;
+	hyphens: none;
 }
 
 .markdownBody .margin-notes-block.hidden {
