--- a/css/default.css
+++ b/css/default.css
@@ -2087,13 +2087,14 @@ del {
 	p.graphical-drop-cap .hidden-initial-letter {
 		display: inline-block;
 		width: 0;
+		height: 0;
 		overflow: hidden;
 	}
 	p.graphical-drop-cap img.drop-cap {
 		float: left;
 		display: block;
 		height: 9.4em;
-		margin: 0 -0.10em -0.95em -0.75em;
+		margin: -0.5em -0.10em -0.95em -0.75em;
 		filter: none;
 	}
 
