default.html: xotd: +IDs for consistency & linkability

--- a/template/default.html
+++ b/template/default.html
@@ -165,11 +165,11 @@
           </p>
 
           <div id="x-of-the-day">
-            <a class="include include-spinner-not icon-not" href="/metadata/today-quote.html">[Quote Of The Day]</a>
+            <a id="qotd" class="include include-spinner-not icon-not" href="/metadata/today-quote.html">[Quote Of The Day]</a>
 
-            <a class="include include-spinner-not icon-not" href="/metadata/today-site.html">[Site Of The Day]</a>
+            <a id="sotd" class="include include-spinner-not icon-not" href="/metadata/today-site.html">[Site Of The Day]</a>
 
-            <a class="include include-spinner-not icon-not" href="/metadata/today-annotation.html">[Annotation Of The Day]</a>
+            <a id="atod" class="include include-spinner-not icon-not" href="/metadata/today-annotation.html">[Annotation Of The Day]</a>
           </div>
         </div>
 
