default.html: logo: swap alt/title attribute to be more standard-compliant
the W3C HTML validator has long complained about this ('Attribute alt not allowed on element svg at this point.') but I've ignored it because it seemed to be wrong in other similar cases. However, looking closer at https://developer.mozilla.org/en-US/docs/Web/SVG/Element/svg#attributes https://www.w3.org/TR/SVG2/struct.html#elementdef-svg shows no mention of 'alt' being legal, only 'title'. so alt->atitle.

--- a/template/default.html
+++ b/template/default.html
@@ -98,7 +98,7 @@
     <main>
       <nav id="sidebar">
         <a class="logo" rel="home me contents" href="/index" title="Homepage: categorized list of articles index">
-          <svg class="logo-image" viewBox="0 0 64 75" alt="Gwern.net Site Logo (a Fraktur blackletter capital G)"><use href="/static/img/logo/logo-smooth.svg#logo" /></svg>
+          <svg class="logo-image" viewBox="0 0 64 75" title="Gwern.net Site Logo (a Fraktur blackletter capital G)"><use href="/static/img/logo/logo-smooth.svg#logo" /></svg>
         </a>
         <div class="sidebar-links" title="Links about this website">
         <a class="icon-not site  link-page link-annotated" href="/about"                 title="Site ideals, source, content, traffic, examples, license" rel="author">Site</a>
