--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2322,18 +2322,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1705740373#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1705201596#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1705740373#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1705201596#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1705740373#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1705201596#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1705740373#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1705201596#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5209,14 +5209,14 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1705740373#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1705201596#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1705740373#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1705201596#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5357,7 +5357,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1705740373#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1705201596#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5817,14 +5817,14 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1705740373#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1705201596#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1705740373#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1705201596#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6726,7 +6726,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1705740373#question');
+    background-image: url('/static/img/icon/icons.svg?v=1705201596#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7292,7 +7292,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1705740373#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1705201596#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7367,7 +7367,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 
 .markdownBody span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1705740373#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1705201596#hand-point-right-regular');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
@@ -7656,7 +7656,6 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 .markdownBody .colors-invert a[data-link-icon-type='svg'] .link-icon-hook::after {
     filter: invert(1);
 }
-
 
 /**************/
 /* LINK ICONS */
@@ -8650,11 +8649,17 @@ a[data-link-icon='emacs'] .link-icon-hook::after {
     opacity: 0.65;
 }
 
-
 a[data-link-icon='chicago-tribune'] .link-icon-hook::after { /* fraktur C */
     --link-icon-offset-x: 0.10em;
     --link-icon-offset-y: 0.20em;
     opacity: 0.65;
+}
+
+a[data-link-icon='tiktok'] .link-icon-hook::after {
+    --link-icon-offset-x: 0.10em;
+    --link-icon-offset-y: 0.15em;
+  /* opacity: 0.7; */
+  --link-icon-size: 0.75em;
 }
 
 /*=------------------=*/
@@ -8667,7 +8672,7 @@ a[data-link-icon='wikipedia'] .link-icon-hook::after {
     --link-icon-offset-y: 0.50em;
 
     opacity: 0.65;
-	margin-right: 0.05em;
+    margin-right: 0.05em;
 }
 a[data-link-icon='wikipedia']:hover .link-icon-hook::after {
     opacity: 0.4;
@@ -8678,11 +8683,11 @@ a[data-link-icon='wikipedia']:hover .link-icon-hook::after {
     has-annotation classes, see LinkMetadata.hs’s `wikipediaArticleNamespace`
     function); the dotted-underlining is enough.
  */
-/*	Experimentally un-suppressing, in tandem with styling changes to the WP
-	link icon that make it less obtrusive.
-		—SA 2023-11-19
+/*  Experimentally un-suppressing, in tandem with styling changes to the WP
+    link icon that make it less obtrusive.
+        —SA 2023-11-19
  */
-/* 
+/*
 a[data-link-icon='wikipedia'].has-annotation .link-icon-hook {
     display: none;
 }
