essay thumbnails: make their CSS styling configurable/overrideable per-page
(ie. YAML metadata -> Hakyll variable -> default.html <meta> tag -> scraped annotation), mostly to enable .outline rather than .outline-not on screenshots/graphs, but can be useful for dark-mode too (some essay thumbnails wind up inverted but shouldn't be)

--- a/template/default.html
+++ b/template/default.html
@@ -44,6 +44,7 @@
     <meta property="og:image:alt" content="Default thumbnail text: the Gwern.net site logo, a logotype of a large blackletter fraktur capital letter 'G' on a white background.">$endif$
     <meta property="og:image:height" content="$thumbnailHeight$">
     <meta property="og:image:width" content="$thumbnailWidth$">
+    <meta property="gwern:thumbnail:css-classes" content="$thumbnailCSS$">
     $if(tagsPlain)$<meta name="keywords" content="$tagsPlain$">$endif$
     <meta name="dc.date.issued" content="$created$">
     $if(error404)$<meta name="robots" content="noindex, nofollow, nosnippet, nocache, noarchive">$endif$
